[gd_scene load_steps=11 format=3 uid="uid://fuoueblo4uc4"]

[ext_resource type="Script" path="res://Scripts/Characters/character.gd" id="1_7ti38"]
[ext_resource type="Texture2D" uid="uid://d0woc8imx4ekw" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0109.png" id="2_1rhfj"]
[ext_resource type="PackedScene" uid="uid://ds64a1f8gfted" path="res://Scenes/health_bar.tscn" id="3_4n2p6"]
[ext_resource type="Texture2D" uid="uid://dwgiknhalj5pm" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0104.png" id="4_dt7cm"]
[ext_resource type="Texture2D" uid="uid://cymvme8dqaqcl" path="res://Assets/kenney_tiny-town/Tiles/tile_0118.png" id="5_kn358"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x7i5l"]
radius = 5.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qr6ai"]
size = Vector2(16, 8)

[sub_resource type="Animation" id="Animation_28hdd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oi85n"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -14), Vector2(0, -14), Vector2(0, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, -0.785398, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3g80"]
_data = {
"RESET": SubResource("Animation_28hdd"),
"death": SubResource("Animation_oi85n")
}

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_7ti38")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1rhfj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_x7i5l")

[node name="WeaponHolder" type="Marker2D" parent="."]
visible = false

[node name="Melee" type="Area2D" parent="WeaponHolder"]
position = Vector2(11, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponHolder/Melee"]
position = Vector2(6, 0)
rotation = 1.5708
texture = ExtResource("4_dt7cm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder/Melee"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_qr6ai")

[node name="Ranged" type="Marker2D" parent="WeaponHolder"]
position = Vector2(13, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponHolder/Ranged"]
texture = ExtResource("5_kn358")

[node name="Timer" type="Timer" parent="WeaponHolder/Ranged"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f3g80")
}

[node name="AttackCooldown" type="Timer" parent="."]
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("3_4n2p6")]

[node name="BleedTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="BleedTimer" to="." method="_on_bleed_timer_timeout"]
